# Funnel

./: CMakeLists.txt
src/exec/: Config.hpp.in  SimpleStupidFunnel.cpp  SimpleStupidFunnel.hpp  main.cpp  ssf.frag  ssf.vert
src/ssf/: ssf.cpp  ssf.hpp  test_cases.hpp
src/testing/: SSFTests.cpp
